force-app/main/default/objects/Inspection__c/fields/Contractor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual of Contractor that will be completing the Inspection.</inlineHelpText>
    <label>Vendor Resource</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>