force-app/main/default/objects/Inspection__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that will be doing the inspection.</description>
    <inlineHelpText>Contact that will be doing the inspection.</inlineHelpText>
    <label>Inspector</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Inspections1</relationshipName>
    <type>Lookup</type>
</CustomField>