force-app/main/default/objects/Inspection__c/fields/Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The trade the Contractor specializes in.</description>
    <inlineHelpText>The trade the Contractor specializes in.</inlineHelpText>
    <label>Trade Type</label>
    <referenceTo>Trade_Type__c</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>