force-app/main/default/objects/Inspection__c/fields/TYpe__c.field-meta.xml
<CustomField>
    <fullName>TYpe__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>