force-app/main/default/objects/Inspection__c/fields/Vendor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Responsible_Contractor__c</field>
            <operation>equals</operation>
            <valueField>Contract__c.Vendor__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>